navigation bar fixed; overflow hidden added

--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,7 @@ ul{
   list-style: none;
   padding: 0em;
   margin: 0em;
+  overflow: hidden;
 }
 
 li{
